fix: Change the product structure in DB